tests/AbstractTests/invalid_assert2.avm.expected
Return: 84
Error: [1;31mline 2:[1;33m Assert failed
