tests/AbstractTests/invalid_assert2.avm
push int8(1)
assert int8(0)
exit
